--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "PhD Candidate"
   location         : "St. Louis"
-  employer         : "Washington University in St. Louis"
+  employer         : 
   pubmed           : 
   googlescholar    : 
   email            : "johnjallen@wustl.edu"
