--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "John Allen"
-  avatar           : "Screen Shot 2021-05-20 at 11.33.08 AM.png"
+  avatar           : "profile.png"
   bio              : "PhD Candidate"
   location         : "St. Louis"
   employer         : 
