--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "John Allen / Homepage"
 title_separator          : "-"
 name                     : &name "John Allen"
 description              : &description "PhD Candidate at Washington University in St. Louis"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://joeyallen761.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "joeyallen761/joeyallen761.github.io"
+repository               : "joeyallen761.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
