--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "John Allen"
-  avatar           : "profile.png"
-  bio              : "PhD Candidate"
+  avatar           : "_DSC1895.jpg"
+  bio              : "PhD Candidate at Washington University in St. Louis"
   location         : "St. Louis"
   employer         : 
   pubmed           : 
