--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "John Allen"
-  avatar           : "foo-bar-identity-th.jpg"
+  avatar           : "_DSC1895.jpg"
   bio              : "PhD Candidate at Washington University in St. Louis"
   location         : "St. Louis"
   employer         : 
