--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Talks"
     url: /talks/    
   
-  - title: "Fun Projects"
+  - title: "Projects"
     url: /projects/    
 
   - title: "Teaching"
